[package]
name = "random"
version = "0.1.0"
authors = ["Marirs <marirs@gmail.com>"]
description = "Random generator of timezones, dates, IP address, Mac Address, Users, User Agents, etc..."
keywords = ["random", "generator", "date", "ip", "users"]
include = [
    "assets",
    "src"
]
readme = "README.md"
license-file = "LICENSE"
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", optional = true }
csv = { version = "1.1.5", optional = true }
ipnetwork = "0.17.0"
mac_oui = "0.3.1"
rand = { version = "0.8.3", optional = true }
regex = "1.4.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_derive = "1.0.123"
uuid = { version = "0.8.2", features = ["v4"] }

[lib]
name = "random"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["timegenerate", "tz"]
timegenerate = ["chrono", "rand"]
tz = ["csv", "rand"]

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true

[[example]]
name = "tz"
path = "examples/tz.rs"
required-features = ["tz"]

[[example]]
name = "dt"
path = "examples/dt.rs"
required-features = ["timegenerate"]
